--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -7,22 +7,22 @@
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.tarikul.sampleproject.HomeFragment"
+        android:name="com.tarikul.sampleproject.ui.main.view.fragment.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" />
     <fragment
         android:id="@+id/searchFragment"
-        android:name="com.tarikul.sampleproject.SearchFragment"
+        android:name="com.tarikul.sampleproject.ui.main.view.fragment.SearchFragment"
         android:label="fragment_search"
         tools:layout="@layout/fragment_search" />
     <fragment
         android:id="@+id/movieFragment"
-        android:name="com.tarikul.sampleproject.MovieFragment"
+        android:name="com.tarikul.sampleproject.ui.main.view.fragment.MovieFragment"
         android:label="fragment_movie"
         tools:layout="@layout/fragment_movie" />
     <fragment
         android:id="@+id/profileFragment"
-        android:name="com.tarikul.sampleproject.ProfileFragment"
+        android:name="com.tarikul.sampleproject.ui.main.view.fragment.ProfileFragment"
         android:label="fragment_profile"
         tools:layout="@layout/fragment_profile" />
 </navigation>
