--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -24,6 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:fontFamily="@font/roboto"
+        android:maxLines="1"
         android:text="Movie Title"
         android:textColor="#444444"
         android:textSize="14sp"
