Work on the trending movies part

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -42,7 +42,8 @@
                 android:fontFamily="@font/roboto"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
-                android:text="RECENT VIEWING"
+                android:text="Trending movies"
+                android:textAllCaps="true"
                 android:textColor="#444444"
                 android:textSize="18sp"
                 app:layout_constraintBottom_toTopOf="@id/recyclerView"
@@ -105,7 +106,7 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/upComingRecyclerView"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
