Modify the HomeFragment code

--- a/app/src/main/res/layout/item_trending.xml
+++ b/app/src/main/res/layout/item_trending.xml
@@ -61,6 +61,7 @@
         android:textColor="@color/colorAccent"
         android:textSize="16sp"
         android:textStyle="bold"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/tvMovieTitle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
