--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -9,7 +9,18 @@
         android:id="@+id/homeFragment"
         android:name="com.tarikul.sampleproject.ui.main.view.fragment.HomeFragment"
         android:label="fragment_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home">
+
+
+        <action
+            android:id="@+id/tvTrending"
+            app:destination="@id/moviesFragment" />
+        <argument
+            android:name="movie_type"
+            app:argType="string"
+            android:defaultValue="movies_trending" />
+
+    </fragment>
     <fragment
         android:id="@+id/searchFragment"
         android:name="com.tarikul.sampleproject.ui.main.view.fragment.SearchFragment"
