replace the movie type to enum class

--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -39,8 +39,8 @@
 
         <argument
             android:name="movie_type"
-            android:defaultValue="movies_trending"
-            app:argType="string" />
+            android:defaultValue="TRENDING"
+            app:argType="com.tos.androidlivedataviewmodel.projectOne.utils.MovieType" />
 
     </fragment>
 </navigation>
