Work on Similar movies

--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -75,7 +75,7 @@
                 android:fontFamily="@font/roboto"
                 android:marqueeRepeatLimit="marquee_forever"
                 android:singleLine="true"
-                android:textColor="@color/colorAccent"
+                android:textColor="@color/red"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="@+id/flBackdrop"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -210,7 +210,8 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="16dp"
                     android:fontFamily="@font/roboto"
-                    android:text="Actors"
+                    android:text="Similar movies"
+                    android:textAllCaps="true"
                     android:textColor="@color/Black_50"
                     android:textSize="18sp"
                     app:layout_constraintStart_toStartOf="parent"
