--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#ffffff</color>
     <color name="colorPrimaryDark">#ffffff</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="red">#D32F2F</color>
     <color name="bottom_nav_background">#eafbea</color>
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
