Modify the MovieDetail Fragment and viewModel class

--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -48,7 +48,7 @@
     </fragment>
     <fragment
         android:id="@+id/movieDetailFragment"
-        android:name="com.tarikul.sampleproject.ui.main.view.fragment.MovieDetailFragment"
+        android:name="com.tarikul.sampleproject.ui.main.detail.MovieDetailFragment"
         android:label="fragment_movie_detail"
         tools:layout="@layout/fragment_movie_detail" >
         <argument
